--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,12 @@
    "files.autoSave": "afterDelay",
    "workbench.colorTheme": "Visual Studio 2019 Dark",
    "terminal.integrated.gpuAcceleration": "canvas",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "[python]": {
+      "editor.defaultFormatter": "ms-python.python"
+   },
+   "python.formatting.provider": "yapf",
+   "[django-html]": {
+      "editor.defaultFormatter": "monosans.djlint"
+   }
 }
