--- a/requirements.txt
+++ b/requirements.txt
@@ -2,39 +2,26 @@ asgiref==3.5.2
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+crispy-bootstrap5==0.7
 cryptography==38.0.1
-cssbeautifier==1.14.7
 defusedxml==0.7.1
 dj-database-url==1.0.0
 Django==3.2.16
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
-djlint==1.19.3
-EditorConfig==0.12.3
 gunicorn==20.1.0
-html-tag-names==0.1.2
-html-void-elements==0.1.0
 idna==3.4
-importlib-metadata==5.0.0
-jsbeautifier==1.14.7
 oauthlib==3.2.1
-pathspec==0.10.1
 psycopg2==2.9.4
 pycodestyle==2.9.1
 pycparser==2.21
 PyJWT==2.5.0
 python3-openid==3.2.0
 pytz==2022.4
-PyYAML==6.0
-regex==2022.9.13
 requests==2.28.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
-tomli==2.0.1
-tqdm==4.64.1
 types-cryptography==3.3.23.1
 urllib3==1.26.12
-vboxapi==1.0
 whitenoise==6.2.0
-yapf==0.32.0
