--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.26.6
 botocore==1.29.6
 certifi==2022.9.24
 cffi==1.15.1
+chardet==3.0.4
 charset-normalizer==2.1.1
 crispy-bootstrap5==0.7
 cryptography==38.0.1
@@ -14,6 +15,7 @@ django-countries==7.4.2
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-storages==1.13.1
+docutils==0.15.2
 gunicorn==20.1.0
 idna==3.4
 jmespath==1.0.1
@@ -31,8 +33,8 @@ requests-oauthlib==1.3.1
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.3
+stripe==2.42.0
 types-cryptography==3.3.23.1
 typing_extensions==4.4.0
 urllib3==1.26.12
-whitenoise==6.2.0
 yapf==0.32.0
