--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,10 @@ django-countries==7.4.2
 django-crispy-forms==1.14.0
 django-storages==1.13.1
 docutils==0.15.2
+geographiclib==2.0
+geopy==2.3.0
 gunicorn==20.1.0
+haversine==2.7.0
 idna==3.4
 jmespath==1.0.1
 oauthlib==3.2.1
