--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cryptography==38.0.1
 defusedxml==0.7.1
 dj-database-url==1.0.0
 Django==3.2.16
+django-admin-rangefilter==0.9.0
 django-allauth==0.51.0
 django-countries==7.4.2
 django-crispy-forms==1.14.0
