--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-storages==1.13.1
+django-tinymce==3.5.0
 docutils==0.15.2
 geographiclib==2.0
 geopy==2.3.0
