Add all to github and test final deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,4 +28,7 @@
       "editor.defaultFormatter": "ms-python.python"
    },
    "python.formatting.provider": "yapf",
+   "cSpell.words": [
+      "recieving"
+   ],
 }
